feat: Pagination, Input-Validation und Unit-Tests
1. Pagination (paginated-Flag-Muster):
   - OrderController/Service, PaymentController/Service,
     InventoryController/Service, AddressController/Service,
     DueScheduleController/Service — alle getAll-Endpunkte
     unterstützen jetzt ?paginated=true&page=0&size=20&sortBy=...

2. Input-Validation (@NotNull, @DecimalMin, @Positive, @NotBlank):
   - DueScheduleDto: subscriptionId, dueDate, periodStart, periodEnd
   - OpenItemDTO: invoiceId, amount, dueDate
   - SubscriptionDto: startDate, billingCycle
   - PaymentDto: paidAmount, paidDate
   - ContractRenewalRequest: extensionMonths
   - RefreshRequest: refreshToken
   - @Valid ergänzt in DueScheduleController (POST/PUT)
     und OpenItemController (POST/PUT)

3. Unit-Tests:
   - OrderServiceTest (6 Tests)
   - PaymentServiceTest (6 Tests)
   - Alle 12 Tests grün

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>